<resources>
    <string name="app_name">StudentProductivityAPP</string>
    <string name="pdf_manager">PDF File Management / Camera</string>
    <string name="homework_calendar">Homework Calendar / Reminders</string>
    <string name="campus_map">Campus Map</string>
    <string name="video_lectures">Video Lecture Searching / Management</string>
    <string name="video_lecture_url_hint">Enter video lecture URL</string>
    <string name="load_video">Load</string>
    <string name="search_phrase_hint">Search for a phrase</string>
    <string name="search_button_text">Search</string>
    <string name="prev_button_text">Previous</string>
    <string name="next_button_text">Next</string>
    <string name="scan_new_document">Scan a New Document</string>
    <string name="view_saved_scans">View Saved Scans</string>
    <string name="assignment_list_description">List of your academic assignments</string>
    <string name="course_name_e_g_cs_3318">Course Name (e.g. CS 3318)</string>
    <string name="new_assignment">New Assignment</string>

    <string name="nav_home">Home</string>
    <string name="nav_tasks">Tasks</string>
    <string name="nav_map">Map</string>
    <string name="nav_scanner">Scanner</string>
    <string name="nav_lectures">Lectures</string>

    <string name="ocr_keyword_detected">Keyword Detected!</string>
<<<<<<< HEAD
    <string name="enter_video_lecture_url">Enter video lecture URL</string>
=======
    <string name="smart_scan">Smart Scan</string>
    <string name="create_assignment">Create Assignment</string>


>>>>>>> 4b5206ce7a6877c00914f002aaf2a61f14210d32

</resources>
